# Foresight

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Foresight.jucer  README.md
.github/workflows/: build.yml
Builds/VisualStudio2022/: Foresight.sln  ForesightProcessor.h  Foresight_SharedCode.vcxproj  Foresight_SharedCode.vcxproj.filters  Foresight_StandalonePlugin.vcxproj  Foresight_StandalonePlugin.vcxproj.filters  Foresight_VST3.vcxproj  Foresight_VST3.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: BufferedMidiMessage.cpp  BufferedMidiMessage.h  BufferedNote.cpp  BufferedNote.h  ConfigParserUtil.cpp  ConfigParserUtil.h  Configuration.cpp  Configuration.h  GuiEditorComponent.cpp  GuiEditorComponent.h  GuiMainComponent.cpp  GuiMainComponent.h  IInputTreeNode.h  InputTreeCase.cpp  InputTreeCase.h  InputTreeNodeFactory.cpp  InputTreeNodeFactory.h  InputTreeRootNode.cpp  InputTreeRootNode.h  InputTreeSwitchNode.cpp  InputTreeSwitchNode.h  InputTreeTagNode.cpp  InputTreeTagNode.h  NoteContext.cpp  NoteContext.h  NoteProcessor.cpp  NoteProcessor.h  OutputListNode.cpp  OutputListNode.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Versioning.h  VoiceManager.cpp  VoiceManager.h  VoiceProcessor.cpp  VoiceProcessor.h
